fixes button overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -92,10 +92,20 @@ justify-content: space-around;
 /* justify-content: center; */
 }
 
-#tempValue {
+/* #tempValue {
 font-size: 3rem;
 margin-left: 1.5rem;
 margin-right: 1.5rem;
+} */
+#tempValue {
+display: block;
+width: 150px;
+min-height: 3rem;
+font-size: 3rem;
+text-align: center;
+word-break: break-word;
+color: orange;
+margin: 0 auto;
 }
 
 .temperature__controls {
